@@ -19,8 +19,6 @@ package org.apache.lucene.codecs.lucene90;
 import static org.apache.lucene.codecs.lucene90.Lucene90DocValuesFormat.TERMS_DICT_BLOCK_LZ4_SHIFT;
 
 import java.io.IOException;
-import java.util.HashMap;
-import java.util.Map;
 import org.apache.lucene.codecs.CodecUtil;
 import org.apache.lucene.codecs.DocValuesProducer;
 import org.apache.lucene.index.BaseTermsEnum;
@@ -39,6 +37,7 @@ import org.apache.lucene.index.SortedNumericDocValues;
 import org.apache.lucene.index.SortedSetDocValues;
 import org.apache.lucene.index.TermsEnum;
 import org.apache.lucene.index.TermsEnum.SeekStatus;
+import org.apache.lucene.internal.hppc.IntObjectHashMap;
 import org.apache.lucene.store.ByteArrayDataInput;
 import org.apache.lucene.store.ChecksumIndexInput;
 import org.apache.lucene.store.DataInput;
@@ -54,11 +53,11 @@ import org.apache.lucene.util.packed.DirectReader;
 
 /** reader for {@link Lucene90DocValuesFormat} */
 final class Lucene90DocValuesProducer extends DocValuesProducer {
-  private final Map<String, NumericEntry> numerics;
-  private final Map<String, BinaryEntry> binaries;
-  private final Map<String, SortedEntry> sorted;
-  private final Map<String, SortedSetEntry> sortedSets;
-  private final Map<String, SortedNumericEntry> sortedNumerics;
+  private final IntObjectHashMap<NumericEntry> numerics;
+  private final IntObjectHashMap<BinaryEntry> binaries;
+  private final IntObjectHashMap<SortedEntry> sorted;
+  private final IntObjectHashMap<SortedSetEntry> sortedSets;
+  private final IntObjectHashMap<SortedNumericEntry> sortedNumerics;
   private final IndexInput data;
   private final int maxDoc;
   private int version = -1;
@@ -75,11 +74,11 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
     String metaName =
         IndexFileNames.segmentFileName(state.segmentInfo.name, state.segmentSuffix, metaExtension);
     this.maxDoc = state.segmentInfo.maxDoc();
-    numerics = new HashMap<>();
-    binaries = new HashMap<>();
-    sorted = new HashMap<>();
-    sortedSets = new HashMap<>();
-    sortedNumerics = new HashMap<>();
+    numerics = new IntObjectHashMap<>();
+    binaries = new IntObjectHashMap<>();
+    sorted = new IntObjectHashMap<>();
+    sortedSets = new IntObjectHashMap<>();
+    sortedNumerics = new IntObjectHashMap<>();
     merging = false;
 
     // read in the entries from the metadata file.
@@ -139,11 +138,11 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
 
   // Used for cloning
   private Lucene90DocValuesProducer(
-      Map<String, NumericEntry> numerics,
-      Map<String, BinaryEntry> binaries,
-      Map<String, SortedEntry> sorted,
-      Map<String, SortedSetEntry> sortedSets,
-      Map<String, SortedNumericEntry> sortedNumerics,
+      IntObjectHashMap<NumericEntry> numerics,
+      IntObjectHashMap<BinaryEntry> binaries,
+      IntObjectHashMap<SortedEntry> sorted,
+      IntObjectHashMap<SortedSetEntry> sortedSets,
+      IntObjectHashMap<SortedNumericEntry> sortedNumerics,
       IndexInput data,
       int maxDoc,
       int version,
@@ -173,15 +172,15 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
       }
       byte type = meta.readByte();
       if (type == Lucene90DocValuesFormat.NUMERIC) {
-        numerics.put(info.name, readNumeric(meta));
+        numerics.put(info.number, readNumeric(meta));
       } else if (type == Lucene90DocValuesFormat.BINARY) {
-        binaries.put(info.name, readBinary(meta));
+        binaries.put(info.number, readBinary(meta));
       } else if (type == Lucene90DocValuesFormat.SORTED) {
-        sorted.put(info.name, readSorted(meta));
+        sorted.put(info.number, readSorted(meta));
       } else if (type == Lucene90DocValuesFormat.SORTED_SET) {
-        sortedSets.put(info.name, readSortedSet(meta));
+        sortedSets.put(info.number, readSortedSet(meta));
       } else if (type == Lucene90DocValuesFormat.SORTED_NUMERIC) {
-        sortedNumerics.put(info.name, readSortedNumeric(meta));
+        sortedNumerics.put(info.number, readSortedNumeric(meta));
       } else {
         throw new CorruptIndexException("invalid type: " + type, meta);
       }
@@ -392,7 +391,7 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
 
   @Override
   public NumericDocValues getNumeric(FieldInfo field) throws IOException {
-    NumericEntry entry = numerics.get(field.name);
+    NumericEntry entry = numerics.get(field.number);
     return getNumeric(entry);
   }
 
@@ -733,7 +732,7 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
 
   @Override
   public BinaryDocValues getBinary(FieldInfo field) throws IOException {
-    BinaryEntry entry = binaries.get(field.name);
+    BinaryEntry entry = binaries.get(field.number);
 
     if (entry.docsWithFieldOffset == -2) {
       return DocValues.emptyBinary();
@@ -823,7 +822,7 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
 
   @Override
   public SortedDocValues getSorted(FieldInfo field) throws IOException {
-    SortedEntry entry = sorted.get(field.name);
+    SortedEntry entry = sorted.get(field.number);
     return getSorted(entry);
   }
 
@@ -1295,7 +1294,7 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
 
   @Override
   public SortedNumericDocValues getSortedNumeric(FieldInfo field) throws IOException {
-    SortedNumericEntry entry = sortedNumerics.get(field.name);
+    SortedNumericEntry entry = sortedNumerics.get(field.number);
     return getSortedNumeric(entry);
   }
 
@@ -1435,7 +1434,7 @@ final class Lucene90DocValuesProducer extends DocValuesProducer {
 
   @Override
   public SortedSetDocValues getSortedSet(FieldInfo field) throws IOException {
-    SortedSetEntry entry = sortedSets.get(field.name);
+    SortedSetEntry entry = sortedSets.get(field.number);
     if (entry.singleValueEntry != null) {
       return DocValues.singleton(getSorted(entry.singleValueEntry));
     }
